--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,12 @@
             <version>8.0.25</version>
             <scope>runtime</scope>
         </dependency>
+        <!--MONGO DB CONNECTION-->
+      <dependency> <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>3.10.2</version> </dependency>
     </dependencies>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
